# media2md

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEDIA2MD_V070_INSTALL.md  MEDIA2MD_V074_INSTALL.md  MEDIA2MD_V076_INSTALL.md  MEDIA2MD_V078_INSTALL.md  MEDIA2MD_V079_INSTALL.md  MEDIA2MD_V080_INSTALL.md  MEDIA2MD_V090_INSTALL.md  README.md  RELEASE_MANIFEST.json  SECURITY.md  START_HERE.md  STRICT_ACCEPTANCE_V071.md  STRICT_ACCEPTANCE_V073.md  STRICT_ACCEPTANCE_V074.md  STRICT_ACCEPTANCE_V077.md  STRICT_ACCEPTANCE_V080.md  STRICT_ACCEPTANCE_V081.md  STRICT_ACCEPTANCE_V082.md  STRICT_ACCEPTANCE_V083.md  STRICT_ACCEPTANCE_V086.md  install.sh  install_media2md_v074.py  install_media2md_v075.py  install_media2md_v076.py  install_media2md_v078.py  install_media2md_v083.py  install_media2md_v085.py  install_media2md_v086.py  pyproject.toml
docs/: ACCEPTANCE_AUDIT_V091_20260626.md  AGENT_DECISION_MAP.md  AGENT_INSTALL.md  AGENT_OPERATIONS.md  AGENT_TASK_PROMPTS.md  BILIBILI_VS_YOUTUBE_CAPABILITY_GAP_CHECKLIST.md  CLI_REFERENCE.md  FIRST_RUN.md  PYPI_RELEASE_CHECKLIST_V091.md  RELEASE_NOTES_V091_PYPI.md  RELEASE_PROCESS.md  RELEASE_READINESS_20260629.md  RUFF_MYPY_DEBT_PLAN_V091.md  TASK_BILIBILI_XHS_INTEGRATION_PLAN.md  TASK_IG_POST_OCR_PLAN.md  TASK_MULTI_ACCOUNT_AUTH_SELECTION.md
tests/: conftest.py  test_bilibili_catalog_exactness.py  test_bilibili_doctor_capabilities.py  test_bilibili_identity_merge.py  test_bundled_media2md_urls.py  test_cli_event_contracts.py  test_cli_output_service.py  test_cli_refresh_catalog_alias.py  test_creator_run_progress_ui.py  test_doctor_output_models.py  test_first_user_flow_regression.py  test_generic_media_remediation.py  test_health_taxonomy.py  test_instagram_post_foundations.py  test_instagram_post_ocr_batch_b.py  test_instagram_post_ocr_batch_c.py  test_package.py  test_probe_contracts.py  test_provider_catalog_matrix.py  test_provider_contracts.py  test_provider_health.py  test_provider_resolution.py  test_public_cli_creator_provider_resolution.py  test_public_cli_creator_service.py  test_public_cli_imports.py  test_public_cli_maintenance_service.py  test_public_cli_parser_service.py  test_public_cli_schema_invariants.py  test_public_cli_state_service.py  test_public_cli_tail_service.py  test_registry_event_contracts.py  test_remediation_service.py  test_required_action_contracts.py  test_results_models.py  test_social2md_core_event_contracts.py  test_transcription_required_action_contracts.py  test_update_output_models.py  test_v067_regressions.py  test_v070_release.py  test_v071_youtube_types.py  (+19 more)
tools/: build_release_assets.py
(+107 files in other folders)
