[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "media2md"
version = "0.9.6"
description = "Local-first CLI for turning Instagram, YouTube, TikTok, and Bilibili content into structured Markdown."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Daniel Huang"}]
keywords = ["instagram", "youtube", "tiktok", "bilibili", "markdown", "whisper", "openclaw", "agent"]
classifiers = ["Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Multimedia :: Video"]
dependencies = []

[project.optional-dependencies]
auth-browser = ["browser-cookie3>=0.20"]
instagram = ["gallery-dl>=1.32", "instaloader>=4.15", "browser-cookie3>=0.20", "PyYAML>=6.0"]
youtube = ["yt-dlp[default,curl-cffi]>=2026.1.1", "browser-cookie3>=0.20"]
tiktok = ["yt-dlp[default,curl-cffi]>=2026.1.1", "browser-cookie3>=0.20"]
bilibili = ["bilibili-api-python>=17.4.2", "httpx>=0.28", "yt-dlp[default,curl-cffi]>=2026.1.1"]
ocr-mac-os = ["easyocr>=1.7.2; platform_system == 'Darwin'"]
ocr-windows-linux = ["easyocr>=1.7.2; platform_system != 'Darwin'"]
mlx = ["mlx-whisper>=0.4; platform_system == 'Darwin' and platform_machine == 'arm64'"]
openclaw = []
all = ["gallery-dl>=1.32", "instaloader>=4.15", "yt-dlp[default,curl-cffi]>=2026.1.1", "browser-cookie3>=0.20", "PyYAML>=6.0", "bilibili-api-python>=17.4.2", "httpx>=0.28", "easyocr>=1.7.2", "mlx-whisper>=0.4; platform_system == 'Darwin' and platform_machine == 'arm64'"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.9", "mypy>=1.14", "build>=1.2", "twine>=5"]

[project.scripts]
media2md = "media2md.cli:main"
social2md = "media2md.cli:main"

[project.urls]
Homepage = "https://github.com/danielcanfly/media2md"
Repository = "https://github.com/danielcanfly/media2md"
Issues = "https://github.com/danielcanfly/media2md/issues"
Changelog = "https://github.com/danielcanfly/media2md/blob/main/CHANGELOG.md"

[tool.hatch.build]
exclude = [
  ".venv*/**",
  "venv*/**",
  ".audit-venv/**",
  "build/**",
  "src/media2md/bundle/data/**",
  "docs/archive/**",
  "docs/ACCEPTANCE_AUDIT_V091_20260626.md",
  "docs/PYPI_RELEASE_CHECKLIST_V091.md",
  "docs/RELEASE_NOTES_V091_PYPI.md",
  "docs/RUFF_MYPY_DEBT_PLAN_V091.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/media2md"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
